[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
jsonrpc-pubsub = "18.0.0"
futures = "0.3"
log = "0.4.8"

sc-cli = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", features = ["wasmtime"] }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-executor = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", features = ["wasmtime"] }
sc-service = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-keystore = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-transaction-pool = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-transaction-pool-api = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-consensus-aura = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-consensus-aura = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-consensus = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-consensus = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-consensus-manual-seal = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-network = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-finality-grandpa = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-finality-grandpa = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-client-api = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-timestamp = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-inherents = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-api = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-rpc-api = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-blockchain = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sp-block-builder = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
sc-basic-authorship = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
substrate-frame-rpc-system = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
pallet-transaction-payment-rpc = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }
frame-benchmarking-cli = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
fp-storage = { path = "../../primitives/storage" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
pallet-base-fee = { path = "../../frame/base-fee" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/cennznet/substrate", rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
