[package]
name = "pallet-evm-precompile-curve25519"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@webb.tools>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Curve25519 elliptic curve precompiles for EVM pallet."

[dependencies]
sp-core = { rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, git = "https://github.com/cennznet/substrate" }
frame-support = { rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, git = "https://github.com/cennznet/substrate" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[dependencies.curve25519-dalek]
version = "4.0.0-dev"
default-features = false
features = ["u64_backend", "alloc"]

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"fp-evm/std",
	"codec/std",
]
