[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", default-features = false, git = "https://github.com/cennznet/substrate" }
frame-support = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", default-features = false, git = "https://github.com/cennznet/substrate" }
pallet-evm = { version = "6.0.0-dev", default-features = false, path = "../.." }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
]
