[package]
name = "pallet-evm-precompile-ed25519"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "ED25519 precompiles for EVM pallet."

[dependencies]
sp-core = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"ed25519-dalek/std",
]
