[package]
name = "pallet-evm-precompile-sha3fips"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@commonwealth.im>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "SHA3 FIPS202 precompile for EVM pallet."

[dependencies]
sp-core = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
tiny-keccak = { version = "2.0", features = ["fips202"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
]
